MOVIE BOOKING PROJECT

--- a/public/views/seats.html
+++ b/public/views/seats.html
@@ -37,9 +37,9 @@ SILVER:<input id="toggleElement1" type="radio" name="toggle" /> -->
   <div class="gold" id ="gold">
 <div class="rowA" id="rowA">
   <form id="RowA" name="RowA" >
-  <input type="checkbox" class="gldCls" value="200" onclick="add_sub()"><span class="fa fa-wheelchair"></span> A1</input>
-  <input type="checkbox" class="gldCls" value="200" onclick="add_sub()"><span class="fa fa-wheelchair"></span> A2</input>
-  <input type="checkbox" class="gldCls" value="200" onclick="add_sub()"><span class="fa fa-wheelchair"></span> A3</input>
+  <input type="checkbox" class="gldCls" value="200"><span class="fa fa-wheelchair"></span> A1</input>
+  <input type="checkbox" class="gldCls" value="200"><span class="fa fa-wheelchair"></span> A2</input>
+  <input type="checkbox" class="gldCls" value="200"><span class="fa fa-wheelchair"></span> A3</input>
   <input type="checkbox" class="gldCls" value="200"><span class="fa fa-wheelchair"></span> A4</input>
   <input type="checkbox" class="gldCls" value="A5"><span class="fa fa-wheelchair"></span> A5</input>
   <input type="checkbox" class="gldCls" value="A6"><span class="fa fa-wheelchair"></span> A6</input>
