--- a/public/css/app.scss
+++ b/public/css/app.scss
@@ -44,7 +44,7 @@
   .carousel-inner > .item > a > img {
       width: 60%;
       margin: auto;
-      height: 400px;
+      height: 500px;
 }
 
 .navbar {
@@ -188,4 +188,18 @@ footer { background-color: #0e2c48; min-height:350px; font-family: 'Open Sans', 
     margin-right: auto;
     border-style: inset;
     border-width: 1px;
+}
+
+.bank-select{
+
+
+
+}
+.qwe {
+  display:block;
+
+}
+.nav .navbar-nav{
+  color: white;
+
 }
