MOVIE BOOKING PROJECT

--- a/public/css/app.scss
+++ b/public/css/app.scss
@@ -203,3 +203,17 @@ footer { background-color: #0e2c48; min-height:350px; font-family: 'Open Sans', 
   color: white;
 
 }
+
+
+.DoM{
+  display: -webkit-inline-box;
+}
+
+.DST{
+
+  display:-webkit-inline-box;
+}
+
+.dcdD{
+  display:-webkit-inline-box;
+}
